tests/fixtures/functional_patterns/negative/n08_conditional_push.rs
fn filter_imperative(items: Vec<i32>) -> Vec<i32> {
    let mut result = Vec::new();
    for item in items {
        if item > 0 && item < 100 {
            result.push(item);
        }
    }
    result
}
